# FRIZE

./: .gitignore  FRIZE_기획서_v0.1.md  HANDOFF.md  extlinks.mjs
_ref/: mp.html
_ref/canva_deliverable/: README.md
_ref/kmong_scrape/: LEARNINGS.md  capture.mjs  collect2.mjs  live.mjs  package.json  results.json  web_portfolios.json  wix_templates.json
hardware/: render_all.sh
hardware/bom/: FRIZE_BOM.xlsx  generate_bom.py
hardware/docs/: FRIZE_조립가이드북.md  FRIZE_회로설계.md
hardware/docs/guide/: gen_guide.py  guide.html  shot_pdf.js
hardware/mesh/: anchor.stl  console.stl  console_accent.stl  console_body.stl  console_metal.stl  console_rubber.stl  console_screen.stl  vent.stl  visor.stl
hardware/render_blender/: render_console_product.py  render_products_dark.py  render_studio.py  render_twin_cockpit.py  render_twin_hero.py
hardware/renders/: render_batch.out
hardware/scad/: console_legend.scad  frize_anchor.scad  frize_console.scad  frize_scout_frame.scad  frize_vent.scad  frize_visor.scad  gen_console_legend.py
landing/: CONTENT.md  app.js  build.py  careers.html  company.html  demo.html  index.html  invest.html  main.js  mission.html  news.html  style.css  styles.css  system.html
landing/assets/: CREDITS.md
software/: .env.example  CMakeLists.txt  README.md  build_check.sh  docker-compose.yml  vcpkg.json
software/apps/frize_apparatus/: CMakeLists.txt
software/apps/frize_apparatus/include/frize/apparatus/: actuator.hpp
software/apps/frize_apparatus/src/: actuator.cpp  main.cpp
software/apps/frize_cockpit/: CMakeLists.txt  main.cpp
software/apps/frize_cockpit/assets/: CREDITS.md  generate_cockpit_shot.py  generate_dashboard_shot.py  generate_fireground.py
software/apps/frize_cockpit/deploy/: CONSOLE.md  frize-cockpit.service  frize-console-estop.service  kiosk.sh
software/apps/frize_cockpit/qml/: AlertStack.qml  Card.qml  CommandPanel.qml  DeviceRoster.qml  FeedView.qml  Main.qml  StatChip.qml  TacticalMap.qml  Theme.qml  TopBar.qml  TwinView.qml
software/apps/frize_cockpit/src/: AlertListModel.cpp  CockpitClient.cpp  CockpitClient.hpp  DetectionListModel.cpp  DeviceListModel.cpp  models.hpp
software/apps/frize_cockpit_imgui/: README.md  build_and_shoot.sh  control_map.json  main.cpp  theme.hpp
software/apps/frize_cockpit_live/: CMakeLists.txt  README.md  roster.sample.json
software/apps/frize_cockpit_live/src/: main.cpp
software/apps/frize_console_estop/: CMakeLists.txt  main.cpp
software/apps/frize_core/: CMakeLists.txt
software/apps/frize_core/include/frize/core/: config.hpp  registry.hpp  router.hpp  safety.hpp  vlm_client.hpp  world_model.hpp
software/apps/frize_core/src/: main.cpp  registry.cpp  router.cpp  safety.cpp  vlm_client.cpp  world_model.cpp
software/apps/frize_mapping/: CMakeLists.txt
software/apps/frize_mapping/include/frize/mapping/: voxel_map.hpp
software/apps/frize_mapping/src/: main.cpp
software/apps/frize_mission/: CMakeLists.txt  README.md  build_mission.sh  cards.py  compose.py  main.cpp  render.cpp
software/apps/frize_nav/: CMakeLists.txt  README.md  demo.cpp  dump_obstacles.cpp  e2e.sh  goggle.cpp  goggle_render.py  test_nav.cpp
software/apps/frize_nav/src/: main.cpp
software/apps/frize_recon_sim/: CMakeLists.txt
software/apps/frize_recon_sim/include/frize/sim/: agents.hpp  building.hpp  lidar.hpp
software/apps/frize_recon_sim/src/: main.cpp
software/apps/frize_scout/: CMakeLists.txt
software/apps/frize_scout/include/frize/scout/: flight.hpp  perception.hpp
software/apps/frize_scout/src/: flight.cpp  main.cpp  perception.cpp
software/apps/frize_twin_render/: build_twin.sh  main.cpp
software/apps/frize_visor/: CMakeLists.txt
software/apps/frize_visor/assets/: generate_goggle_view.py
software/apps/frize_visor/include/frize/visor/: hal.hpp
software/apps/frize_visor/src/: ar_display.cpp  capture.cpp  main.cpp  sensors.cpp
software/docker/: Dockerfile.core  mosquitto.conf
software/libs/frize_common/: CMakeLists.txt
software/libs/frize_common/include/frize/: base64.hpp  bus.hpp  geo.hpp  json_glue.hpp  log.hpp  protocol.hpp  schemas.hpp
software/libs/frize_common/include/frize/cockpit/: link.hpp
software/libs/frize_common/include/frize/nav/: ar_project.hpp  astar.hpp  grid.hpp  guide.hpp
software/libs/frize_common/src/: bus.cpp
software/libs/frize_common/test/: test_schemas.cpp
software/libs/frize_recon/: CMakeLists.txt
software/libs/frize_recon/include/frize/recon/: fire.hpp  marching_cubes.hpp  mesh.hpp  tsdf.hpp
software/scripts/: run_sim.sh
software/sim3d/: README.md  package.py  render_fire_video.py  requirements.txt
software/sim3d/docs/: sample_report.json
