add_executable(frize_mapping src/main.cpp)
target_include_directories(frize_mapping PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(frize_mapping PRIVATE cxx_std_17)
target_link_libraries(frize_mapping PRIVATE frize_common frize_recon)

# Eigen / PCL (실제 LiDAR SLAM)
find_package(Eigen3 CONFIG QUIET)
if(Eigen3_FOUND)
    target_link_libraries(frize_mapping PRIVATE Eigen3::Eigen)
endif()
find_package(PCL QUIET COMPONENTS common io filters registration)
if(PCL_FOUND)
    target_link_libraries(frize_mapping PRIVATE ${PCL_LIBRARIES})
    target_include_directories(frize_mapping PRIVATE ${PCL_INCLUDE_DIRS})
    target_compile_definitions(frize_mapping PRIVATE FRIZE_HAVE_PCL ${PCL_DEFINITIONS})
    message(STATUS "frize_mapping: PCL 활성")
endif()
